--- a/app/src/main/res/layout/fragment_notes_list_note_item.xml
+++ b/app/src/main/res/layout/fragment_notes_list_note_item.xml
@@ -2,129 +2,122 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/bg_attention"
-    >
+    android:background="@color/bg_attention">
 
     <ImageView
         android:id="@+id/noteDeleteLeft"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:src="@drawable/ic_action_delete"
         android:layout_gravity="start"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:contentDescription="@string/menu_delete"
-        />
+        android:src="@drawable/ic_action_delete" />
 
     <ImageView
         android:id="@+id/noteDeleteRight"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:src="@drawable/ic_action_delete"
+        android:layout_height="match_parent"
         android:layout_gravity="end"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:contentDescription="@string/menu_delete"
-        />
+        android:src="@drawable/ic_action_delete" />
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/list_item_background_selector"
+    <android.support.v7.widget.LinearLayoutCompat
         android:id="@+id/noteSwipeable"
-        >
-
-        <TextView
-            android:id="@+id/noteTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginEnd="70dp"
-            android:layout_marginRight="70dp"
-            android:ellipsize="marquee"
-            android:maxLines="1"
-            android:textColor="@drawable/list_item_color_selector"
-            android:textSize="16sp"
-            />
-
-        <TextView
-            android:id="@+id/noteCategory"
-            android:layout_width="wrap_content"
-            android:background="@drawable/border"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:paddingTop="1dp"
-            android:paddingBottom="1dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_below="@id/noteTitle"
-            android:maxLines="1"
-            android:textColor="@drawable/list_item_color_selector"
-            android:textSize="14sp"
-            />
-
-        <TextView
-            android:id="@+id/noteExcerpt"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/noteCategory"
-            android:layout_toEndOf="@id/noteCategory"
-            android:layout_alignWithParentIfMissing="true"
-            android:layout_below="@id/noteTitle"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:paddingTop="1dp"
-            android:paddingBottom="1dp"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textColor="@drawable/list_item_color_selector_low"
-            android:textSize="14sp"
-            />
-
-        <ImageView
-            android:id="@+id/noteStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_sync_alert_grey600_18dp"
-            android:layout_toEndOf="@id/noteTitle"
-            android:layout_toRightOf="@id/noteTitle"
-            android:layout_marginStart="-65dp"
-            android:layout_marginLeft="-65dp"
-            android:layout_alignBaseline="@id/noteTitle"
-            android:baseline="14dp"
-            />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/list_item_background_selector">
 
         <ImageView
             android:id="@+id/noteFavorite"
+            android:layout_centerVertical="true"
+            android:padding="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"/>
+
+
+        <android.support.v7.widget.LinearLayoutCompat
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:layout_marginEnd="6dp"
-            android:layout_marginRight="6dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignBaseline="@id/noteTitle"
-            android:baseline="29dp"
-            />
+            android:paddingTop="16dp"
+            android:paddingRight="16dp"
+            android:paddingBottom="16dp"
+            android:orientation="vertical"
+            android:background="@drawable/list_item_background_selector">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_below="@id/noteExcerpt"
-            android:layout_marginTop="16dp"
-            android:src="@color/separator"
-            />
+            <android.support.v7.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/list_item_background_selector">
+                <TextView
+                    android:id="@+id/noteTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:layout_weight="1"
+                    android:textColor="@drawable/list_item_color_selector"
+                    android:textSize="16sp" />
 
-    </RelativeLayout>
+                <ImageView
+                    android:id="@+id/noteStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:baseline="14dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:src="@drawable/ic_sync_alert_grey600_18dp" />
+            </android.support.v7.widget.LinearLayoutCompat>
+
+
+            <android.support.v7.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/list_item_background_selector">
+
+
+                <TextView
+                    android:id="@+id/noteExcerpt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:paddingBottom="1dp"
+                    android:paddingTop="1dp"
+                    android:layout_weight="1"
+                    android:textColor="@drawable/list_item_color_selector_low"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/noteCategory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:background="@drawable/border"
+                    android:maxLines="1"
+                    android:paddingBottom="1dp"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
+                    android:paddingTop="1dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:singleLine="true"
+                    android:textColor="@drawable/list_item_color_selector"
+                    android:textSize="14sp"/>
+            </android.support.v7.widget.LinearLayoutCompat>
+        </android.support.v7.widget.LinearLayoutCompat>
+    </android.support.v7.widget.LinearLayoutCompat>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:src="@color/separator" />
 
 </FrameLayout>
