--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -44,15 +44,16 @@
 					<ImageView
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:paddingTop="56dp"
-						android:paddingBottom="8dp"
-						android:src="@drawable/ic_launcher"
+						android:paddingTop="24dp"
+						android:src="@mipmap/ic_launcher"
 						android:contentDescription="@string/app_name"
 						/>
 					<TextView
 						android:layout_width="match_parent"
 						android:layout_height="wrap_content"
-						android:padding="10dp"
+						android:paddingTop="24dp"
+						android:paddingLeft="12dp"
+						android:layout_gravity="center_vertical"
 						android:text="@string/app_name"
 						android:textAppearance="@style/TextAppearance.AppCompat.Title"
 						/>
