--- a/app/src/main/res/layout/fragment_no_notes.xml
+++ b/app/src/main/res/layout/fragment_no_notes.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:drawableTop="@drawable/ic_launcher"
+    android:drawableTop="@mipmap/ic_launcher"
     android:text="@string/no_notes"
     android:textAppearance="?android:attr/textAppearanceMedium"
     android:textColor="@color/fg_default_low"
