--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -73,7 +73,7 @@
 				<View
 					android:layout_width="match_parent"
 					android:layout_height="1dp"
-					android:background="@android:color/darker_gray"
+					android:background="@color/separator"
 					/>
 
 				<android.support.v7.widget.RecyclerView
