#310 Swipe left favorite
The swipe from right to left marks a note as favorite.
Open question: how to handle the background color? It should be yellow when swiping from left and red when swiping from right.

--- a/app/src/main/res/layout/fragment_notes_list_note_item.xml
+++ b/app/src/main/res/layout/fragment_notes_list_note_item.xml
@@ -5,20 +5,20 @@
     android:background="@color/bg_attention">
 
     <ImageView
-        android:id="@+id/noteDeleteLeft"
+        android:id="@+id/noteFavoriteLeft"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="@dimen/button_padding"
         android:layout_marginStart="@dimen/button_padding"
         android:contentDescription="@string/menu_delete"
-        android:src="@drawable/ic_action_delete" />
+        android:src="@drawable/ic_star_white_24dp" />
 
     <ImageView
         android:id="@+id/noteDeleteRight"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="right|end|center_vertical"
         android:layout_marginEnd="@dimen/button_padding"
         android:layout_marginRight="@dimen/button_padding"
         android:contentDescription="@string/menu_delete"
