--- a/app/src/main/res/drawable-xhdpi/border.xml
+++ b/app/src/main/res/drawable-xhdpi/border.xml
@@ -1,6 +1,8 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <solid android:color="@android:color/white" />
-    <stroke android:width="1dip" android:color="@color/primary"/>
-    <corners
-        android:radius="4dp" />
+    <stroke
+        android:width="1dip"
+        android:color="@color/primary" />
+    <corners android:radius="4dp" />
 </shape>
