--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -1,95 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-										xmlns:app="http://schemas.android.com/apk/res-auto"
-										android:id="@+id/drawerLayout"
-										android:layout_width="match_parent"
-										android:layout_height="match_parent"
-										android:fitsSystemWindows="true"
-	>
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawerLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
-	<include
-		layout="@layout/activity_notes_list_view"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		/>
+    <include
+        layout="@layout/activity_notes_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-	<android.support.design.widget.NavigationView
-		android:id="@+id/navigationView"
-		android:layout_width="wrap_content"
-		android:layout_height="match_parent"
-		android:layout_gravity="start"
-		android:fitsSystemWindows="true"
-		>
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true">
 
-		<android.support.v4.widget.NestedScrollView
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			>
+        <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-			<LinearLayout
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:orientation="vertical"
-				>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-				<LinearLayout
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:background="?attr/colorPrimary"
-					android:padding="10dp"
-					android:theme="@style/ThemeOverlay.AppCompat.Dark"
-					android:orientation="horizontal"
-					android:gravity="bottom"
-					>
-					<ImageView
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:paddingTop="24dp"
-						android:src="@mipmap/ic_launcher"
-						android:contentDescription="@string/app_name"
-						/>
-					<TextView
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content"
-						android:paddingTop="24dp"
-						android:paddingLeft="12dp"
-						android:layout_gravity="center_vertical"
-						android:text="@string/app_name"
-						android:textAppearance="@style/TextAppearance.AppCompat.Title"
-						/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?attr/colorPrimary"
+                    android:padding="10dp"
+                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+                    android:orientation="horizontal"
+                    android:gravity="bottom">
 
-				</LinearLayout>
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="24dp"
+                        android:src="@mipmap/ic_launcher"
+                        android:contentDescription="@string/app_name" />
 
-				<android.support.v7.widget.RecyclerView
-					android:id="@+id/navigationList"
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:layout_gravity="start"
-					android:paddingTop="8dp"
-					android:paddingBottom="8dp"
-					app:layoutManager="LinearLayoutManager"
-					/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="24dp"
+                        android:paddingLeft="12dp"
+                        android:layout_gravity="center_vertical"
+                        android:text="@string/app_name"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
-				<View
-					android:layout_width="match_parent"
-					android:layout_height="1dp"
-					android:background="@color/separator"
-					/>
+                </LinearLayout>
 
-				<android.support.v7.widget.RecyclerView
-					android:id="@+id/navigationMenu"
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:layout_gravity="start"
-					android:paddingTop="8dp"
-					android:paddingBottom="8dp"
-					app:layoutManager="LinearLayoutManager"
-					/>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/navigationList"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
+                    app:layoutManager="LinearLayoutManager" />
 
-			</LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/separator" />
 
-		</android.support.v4.widget.NestedScrollView>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/navigationMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
+                    app:layoutManager="LinearLayoutManager" />
 
-	</android.support.design.widget.NavigationView>
+            </LinearLayout>
+
+        </android.support.v4.widget.NestedScrollView>
+
+    </android.support.design.widget.NavigationView>
 
 </android.support.v4.widget.DrawerLayout>
