--- a/app/src/main/res/layout/widget_single_note.xml
+++ b/app/src/main/res/layout/widget_single_note.xml
@@ -21,8 +21,7 @@
         android:textAlignment="center"
         android:padding="@dimen/widget_single_note_padding" />
 
-</RelativeLayout>
-    <!--
+</RelativeLayout><!--
         TODO: Markdown support
 
         <com.yydcdut.rxmarkdown.RxMDTextView
