--- a/app/src/main/res/menu/menu_note_fragment.xml
+++ b/app/src/main/res/menu/menu_note_fragment.xml
@@ -18,8 +18,7 @@
         android:orderInCategory="100"
         android:title="@string/menu_share"
         app:showAsAction="never"
-        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
-        />
+        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
     <item
         android:id="@+id/menu_cancel"
         android:icon="@drawable/ic_action_cancel"
