--- a/app/src/main/res/xml/create_note_widget_provider.xml
+++ b/app/src/main/res/xml/create_note_widget_provider.xml
@@ -8,5 +8,4 @@
     android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen"
     android:text="@string/widget_create_note"
-    android:resizeMode="none">
-</appwidget-provider>
+    android:resizeMode="none"></appwidget-provider>
