--- a/app/src/main/res/xml/note_list_widget_provider_info.xml
+++ b/app/src/main/res/xml/note_list_widget_provider_info.xml
@@ -9,5 +9,4 @@
     android:resizeMode="vertical|horizontal"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="keyguard|home_screen"
-    android:previewImage="@drawable/note_list_widget_preview"
-    />
+    android:previewImage="@drawable/note_list_widget_preview" />
