--- a/app/src/main/res/menu/menu_menu_create.xml
+++ b/app/src/main/res/menu/menu_menu_create.xml
@@ -6,7 +6,7 @@
         android:id="@+id/action_create_cancel"
         android:icon="@drawable/ic_action_cancel"
         android:orderInCategory="90"
-        android:title="@string/action_create_cancel"
+        android:title="@string/simple_cancel"
         app:showAsAction="ifRoom" />
 
     <item
