--- a/app/src/main/res/menu/menu_note_fragment.xml
+++ b/app/src/main/res/menu/menu_note_fragment.xml
@@ -9,6 +9,7 @@
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menu_category"
+        android:icon="@drawable/ic_folder_white_24dp"
         android:orderInCategory="100"
         android:title="@string/menu_change_category"
         app:showAsAction="ifRoom" />
