Remove bitmap drawables and let Android Studio generate the at buildtime
Tested on virtual Android 8.1, 5.0 and an API Level 14. 14 showed some visual glitches (Some minor parts of the icons are black) - But i think it's a good trade-off. Everything still works.

--- a/app/src/main/res/layout/activity_notes_list_view.xml
+++ b/app/src/main/res/layout/activity_notes_list_view.xml
@@ -39,7 +39,7 @@
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_create"
         style="@style/fab"
-        android:src="@drawable/ic_action_new"
+        android:src="@drawable/ic_add_white_24dp"
         app:backgroundTint="@color/primary"
         app:rippleColor="@color/primary_dark" />
 </android.support.design.widget.CoordinatorLayout>
