--- a/app/src/main/res/layout/widget_note_list.xml
+++ b/app/src/main/res/layout/widget_note_list.xml
@@ -46,7 +46,7 @@
             android:id="@+id/widget_note_list_create_icon"
             android:layout_width="@dimen/widget_note_list_icon_width"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_action_new"
+            android:src="@drawable/ic_add_white_24dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:paddingStart="@dimen/widget_note_list_inner_padding"
