--- a/app/src/main/res/layout/fragment_notes_list_section_item.xml
+++ b/app/src/main/res/layout/fragment_notes_list_section_item.xml
@@ -24,5 +24,5 @@
         android:paddingEnd="16dp"
         android:paddingTop="48dp"
         android:textColor="@color/fg_default_selection"
-        android:textSize="14sp" />
+        android:textSize="@dimen/secondary_font_size" />
 </RelativeLayout>
