--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,9 @@
     <dimen name="button_padding">16dp</dimen>
     <dimen name="button_elevation">5dp</dimen>
 
+    <dimen name="primary_font_size">16sp</dimen>
+    <dimen name="secondary_font_size">14sp</dimen>
+
     <!-- Widgets -->
     <dimen name="widget_margin">8dp</dimen>
     <dimen name="widget_single_note_padding">10dp</dimen>
