--- a/app/src/main/res/layout/widget_single_note_dark.xml
+++ b/app/src/main/res/layout/widget_single_note_dark.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/widget_single_note"
+    android:id="@+id/widget_single_note_dark"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/widget_background">
+    android:background="@color/widget_background_dark_theme">
 
     <ListView
-        android:id="@+id/single_note_widget_lv"
+        android:id="@+id/single_note_widget_lv_dark"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/widget_single_note_padding" />
 
     <TextView
-        android:id="@+id/widget_single_note_placeholder_tv"
+        android:id="@+id/widget_single_note_placeholder_tv_dark"
+        android:background="@color/widget_background_dark_theme"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:text="@string/widget_single_note_placeholder_tv"
-        android:textColor="@color/fg_default_high"
+        android:textColor="@color/fg_default_high_dark_theme"
         android:textAlignment="center"
         android:padding="@dimen/widget_single_note_padding" />
 
