--- a/app/src/main/res/layout/widget_entry.xml
+++ b/app/src/main/res/layout/widget_entry.xml
@@ -30,7 +30,7 @@
         android:layout_gravity="center_vertical"
         android:gravity="center_vertical"
         android:layout_weight="1"
-        android:textColor="@color/fg_default"
+        android:textColor="@color/black"
         android:lines="1"
         android:ellipsize="end" />
 
