--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,7 @@
 
     <color name="category_background">#FFF</color>
     <color name="category_border">@color/primary</color>
+
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
 </resources>
