--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,7 +38,7 @@
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="android:textColorPrimary">@color/fg_default</item>
-        <item name="android:alertDialogTheme">@style/cloudbutton</item>
+        <!--<item name="android:alertDialogTheme">@style/cloudbutton</item>-->
         <item name="android:windowBackground">@color/bg_normal</item>
     </style>
 
