Introduce yellow favorite stars instead of outline
like @jancborchardt and @mario suggested:

- Instead of full grey stars use full yellow stars
- Instead of border grey stars use full grey stars

The changes apply to the widgets and the NotesListView but *not* to the Edit/View-Mode of a single note and *not* to the sidebar, where simple mono color icons look prettier imho.

--- a/app/src/main/res/layout/fragment_notes_list_note_item.xml
+++ b/app/src/main/res/layout/fragment_notes_list_note_item.xml
@@ -12,8 +12,8 @@
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="@dimen/button_padding"
         android:layout_marginStart="@dimen/button_padding"
-        android:contentDescription="@string/menu_delete"
-        android:src="@drawable/ic_star_white_24dp" />
+        android:contentDescription="@string/menu_favorite"
+        android:src="@drawable/ic_star_yellow_24dp" />
 
     <ImageView
         android:id="@+id/noteDeleteRight"
