#359 Use monospace font
Introduces a new setting and displays edit and view mode in monospace if it is set.

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -25,6 +25,12 @@
         android:summary="%s"
         android:title="@string/settings_theme_title" />
 
+    <SwitchPreference
+        android:defaultValue="@string/pref_value_font_normal"
+        android:icon="@drawable/ic_text_fields_black_24dp"
+        android:key="@string/pref_key_font"
+        android:title="@string/settings_font_title" />
+
     <PreferenceScreen
         android:key="@string/pref_key_certs"
         android:persistent="false"
