--- a/app/src/main/res/layout/activity_single_note.xml
+++ b/app/src/main/res/layout/activity_single_note.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v4.widget.SwipeRefreshLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/swiperefreshlayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/bg_normal"
+    tools:context="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity"
+    tools:ignore="MergeRootFrame">
+<ScrollView
     android:id="@+id/editContentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,3 +26,4 @@
         android:textIsSelectable="true" />
 
 </ScrollView>
+</android.support.v4.widget.SwipeRefreshLayout>
