--- a/app/src/main/res/layout/widget_note_list.xml
+++ b/app/src/main/res/layout/widget_note_list.xml
@@ -29,7 +29,7 @@
 
         <TextView
             android:id="@+id/widget_note_list_title_tv"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textColor="@color/white"
             android:textStyle="bold"
