Accessibility: Label for FAB and no focus for images in drawer

--- a/app/src/main/res/layout/item_navigation.xml
+++ b/app/src/main/res/layout/item_navigation.xml
@@ -12,6 +12,7 @@
         android:layout_height="44dp"
         android:padding="10dp"
         android:scaleType="center"
+        android:focusable="false"
         android:src="@drawable/ic_folder_grey600_24dp" />
 
     <TextView
