--- a/app/src/main/res/layout/activity_notes_list_view.xml
+++ b/app/src/main/res/layout/activity_notes_list_view.xml
@@ -40,6 +40,7 @@
         android:id="@+id/fab_create"
         style="@style/fab"
         android:src="@drawable/ic_add_white_24dp"
+        android:title="@string/action_create"
         app:backgroundTint="@color/primary"
         app:rippleColor="@color/primary_dark" />
 </android.support.design.widget.CoordinatorLayout>
